<resources>
    <string name="app_name">Meditation</string>
    <string name="howAreYou">Каким ты себя ощущаешь сегодня?</string>
    <string name="welcomeUsername">С возвращением, Эмиль!</string>
    <string name="auth">Авторизация</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="profile">Профиль</string>
</resources>