<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registration_background"
    tools:context=".SplashScreen"
    tools:ignore="SpeakableTextPresentCheck"
    tools:layout_editor_absoluteX="86dp"
    tools:layout_editor_absoluteY="-20dp">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_marginTop="104dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/registration_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/auth"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFEF9"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.066" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="317dp"
        android:layout_height="470dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.709">

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="99dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/email"
            android:textColorHint="#787777"
            android:textAlignment="textStart"
            android:textColor="#787777" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/password"
            android:textColorHint="#787777"
            android:textAlignment="viewStart"
            android:textColor="#787777" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/enterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#7C9A92"
            android:text="@string/enter"
            android:textColor="#FFFFFF" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registrationButton"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="#00FFFFFF"
            android:outlineAmbientShadowColor="#00FFFFFF"
            android:outlineSpotShadowColor="#00FFFFFF"
            android:shadowColor="#00FFFFFF"
            android:text="@string/registration"
            android:textAlignment="textStart"
            android:textColor="#787777"
            android:textColorHighlight="#00FFFFFF"
            android:textColorHint="#00FFFFFF" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/profileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="#7C9A92"
            android:text="@string/profile"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>